module 9 work in progress

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     },
     "rules": {
        "no-console":"off",
-       "no-duplicate-at-import-rules": false
+       "no-duplicates":0
+       
     }
   }
