--- a/package.json
+++ b/package.json
@@ -3,55 +3,56 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
-    "prestart": "node buildScripts/startMessage.mjs",
-    "start": "npm-run-all --parallel open:src lint:watch",
-    "open:src": "babel-node buildScripts/srcServer.mjs",
+    "prestart": "node --experimental-modules buildScripts/startMessage.mjs",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "open:src": "node --experimental-modules buildScripts/srcServer.mjs",
     "lint": "esw webpack.config.* src buildScripts --color --ext js,mjs",
     "lint:watch": "npm run lint -- --watch",
     "security-check": "npm audit",
     "localtunnel": "lt --port 3000 --subdomain seth",
-    "share": "npm-run-all --parallel open:src localtunnel"
+    "share": "npm-run-all --parallel open:src localtunnel",
+    "test": "mocha --reporter progress  buildScripts/testSetup.mjs \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- -- watch"
   },
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.2",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.4.5",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "chalk": "^2.4.1",
+    "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.2",
-    "chokidar": "^2.0.4",
-    "compression": "^1.7.3",
+    "chokidar": "^3.0.1",
+    "compression": "^1.7.4",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.0.1",
-    "eslint": "^5.10.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-watch": "^4.0.2",
-    "express": "^4.16.4",
+    "css-loader": "^3.0.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-watch": "^5.1.2",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jsdom": "^13.1.0",
+    "jsdom": "^15.1.1",
     "json-schema-faker": "^0.5.0-rc16",
-    "json-server": "^0.14.0",
-    "localtunnel": "^1.9.1",
+    "json-server": "^0.15.0",
+    "localtunnel": "^1.9.2",
     "lodash": "^4.17.11",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.4",
+    "mocha": "^6.1.4",
+    "nock": "^10.0.6",
     "npm-run-all": "^4.1.5",
     "numeral": "^2.0.6",
-    "open": "^6.2.0",
-    "rimraf": "^2.6.2",
+    "open": "^6.3.0",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
-    "webpack": "^4.28.0",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3",
+    "webpack": "^4.35.0",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-md5-hash": "0.0.6"
   }
 }
